<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airplane"
    android:orientation="vertical">

    <TextView
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:text="@string/app_name_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:hint="@string/enter_departure"
        android:id="@+id/edit_departure_date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:hint="@string/enter_travel_origin"
        android:id="@+id/edit_travel_origin"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="0dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:hint="@string/enter_destination"
        android:id="@+id/edit_destination"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="50dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_flight"
            android:onClick="showFlights"
            android:background="@drawable/button_boarder"
            android:textColor="#ffffff"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_itinerary"
            android:onClick="showItineraries"
            android:background="@drawable/button_boarder"
            android:textColor="#ffffff"/>
    </LinearLayout>

</LinearLayout>
