<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airplane"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_text"
            android:gravity="end"
            android:textColor="#ffffff"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_cost"
                android:onClick="itinerarysortbyCost"
                android:checked="false"
                android:buttonTint="#ffffff"
                android:textColor="#ffffff"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_travel_time"
                android:onClick="itinerarysortbyTime"
                android:checked="false"
                android:buttonTint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RadioGroup>


    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/display_itineraries"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:dividerHeight="10dp"
        android:background="@drawable/airplane"></ListView>
</LinearLayout>